Completed login view page

--- a/src/components/reset-password-modal/reset-password-modal.scss
+++ b/src/components/reset-password-modal/reset-password-modal.scss
@@ -3,7 +3,8 @@
 .ResetPassword-Box{
     position: absolute;
     display: flex;
-    padding: 15px;
+    flex-direction: column;
+    padding: 30px;
     border-radius: 4px;
     top: 50%;
     left: 50%;
@@ -14,4 +15,42 @@
     max-width: 500px;
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    .ResetPassword-modal-title{
+        #ResetPassword-modal-title-text{
+            font-size: 32px;
+        }
+    }
+    hr{
+        margin: 10px 0px;
+    }
+    .ResetPassword-modal-body{
+        .ResetPassword-form{
+            .ResetPassword-form-formControl{
+                width: 100%;
+                margin-bottom: 20px;
+                .MuiInputBase-root{
+                    color: $main-color;
+                    input{
+                        padding: 5px;
+                    }
+                }
+            }
+            .ResetPassword-form-formSubmit{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 20px;
+                button{
+                    color: $font-color-main;
+                    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+                    font-size: 16px;
+                    padding: 10px 32px;
+                    background-color: $main-color;
+                    &:hover{
+                        background-color: $main-color-hover;
+                    }
+                }
+            }
+        }
+    }
 }
